<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" 
    android:background="@drawable/bg1">
    
    <EditText
        android:id="@+id/olican_diameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
	    android:layout_margin="30dp"
        android:hint="@string/olican_diameter" />
    
    <TextView 
        android:id="@+id/text_olican_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
	    android:layout_margin="10dp"
        android:text="@string/text_olican_type" />
    
    <RadioGroup 
        android:id="@+id/olican_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal" >
        
        <RadioButton 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/olican_type_fixed" />
        
        <RadioButton 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/olican_type_drift" />
        
    </RadioGroup>
    
    <Button 
        android:id="@+id/btu_olican_fire_water_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
	    android:layout_margin="30dp"
	    android:padding="20dp"
        android:text="@string/btn_send" 
        android:background="@drawable/shape_three"/>
    
    
</LinearLayout>
