<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" 
    android:background="@drawable/bg1">
    
    <EditText
        android:id="@+id/water_power_fire_oilcan_count_feeder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
	    android:layout_margin="20dp"
        android:hint="@string/water_power_fire_oilcan_count_feeder" />
    
    <EditText
        android:id="@+id/water_power_fire_oilcan_count_groundline_band"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
	    android:layout_margin="20dp"
        android:hint="@string/water_power_fire_oilcan_count_groundline_band" />
    
    <EditText
        android:id="@+id/water_power_fire_oilcan_count_feeder_band"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
	    android:layout_margin="20dp"
        android:hint="@string/water_power_fire_oilcan_count_feeder_band" />
    
    <EditText
        android:id="@+id/water_power_fire_oilcan_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
	    android:layout_margin="20dp"
        android:hint="@string/water_power_fire_oilcan_height" />
    
    <Button 
        android:id="@+id/btu_water_power_fire_oilcan"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
	    android:layout_margin="30dp"
	    android:padding="20dp"
        android:layout_height="wrap_content"
        
        android:text="@string/btn_send" />

</LinearLayout>
